use Math.clamp